--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h3 {
   margin: 0 0 10px;
 }
 
-p { 
+p {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -72,17 +72,17 @@ img, video, audio, iframe, table, form {
 .col-1 {
   float: left;
   width: 32%;
-  
+
 }
 
 .col-2 {
   float: left;
   width: 66%;
-  
+
 }
 
 .col-3 {
-  
+
 }
 
 [class*="col-"] {
@@ -112,7 +112,9 @@ img, video, audio, iframe, table, form {
 
 /*////////// HEADER //////////*/
 
-
+.shadow{
+  box-shadow: 0 3px 10px #333;
+}
 
 /*////////// NAVBAR //////////*/
 
@@ -161,5 +163,3 @@ section {
 }
 
 /*////////// FOOTER //////////*/
-
-
