automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ img, video, audio, iframe, table, form {
   padding-right: 30px;
 }
 .white-wood{
-  background: url(../images/white-wood.jpg) no-repeat center top;
+  background: url(images/white-wood.jpg) no-repeat center top;
   background-size: cover;
 }
 
