--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,8 @@ header {
   left: 0;
   width: 100%;
   z-index: 2;
-  border-bottom: 1px;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
   
 }
 
