automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,20 @@ header {
   z-index: 2;
   border-bottom: 1px solid #ccc;
   text-align: center;
-  
 }
-
+#navbar nav{
+  border-left:  1px solid #ccc;
+}
+#navbar nav a{
+  display: inline-block;
+  width: 16.6667%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: black; 
+  text-align: center;
+  border-right: 1px solid #ccc;
+}
 /*////////// MAIN SECTIONS //////////*/
 
 section {
