--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ img, video, audio, iframe, table, form {
 }
 #logo h1 {
   font-family: 'Clicker Script', cursive;
+  margin: 0;
 }
 
 #logo h2 {
@@ -195,7 +196,7 @@ background: -webkit-gradient(linear,left top,left bottom,color-stop(0%, rgba(0, 
 background: -webkit-linear-gradient(top,rgba(0, 0, 0, 1) 0%,rgba(71, 71, 71, 1) 28%,rgba(81, 81, 81, 1) 35%,rgba(71, 71, 71, 1) 72%,rgba(43, 43, 43, 1) 87%,rgba(28, 28, 28, 1) 91%,rgba(0, 0, 0, 1) 100%); /* Chrome10+,Safari5.1+ */
 background: -o-linear-gradient(top,rgba(0, 0, 0, 1) 0%,rgba(71, 71, 71, 1) 28%,rgba(81, 81, 81, 1) 35%,rgba(71, 71, 71, 1) 72%,rgba(43, 43, 43, 1) 87%,rgba(28, 28, 28, 1) 91%,rgba(0, 0, 0, 1) 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top,rgba(0, 0, 0, 1) 0%,rgba(71, 71, 71, 1) 28%,rgba(81, 81, 81, 1) 35%,rgba(71, 71, 71, 1) 72%,rgba(43, 43, 43, 1) 87%,rgba(28, 28, 28, 1) 91%,rgba(0, 0, 0, 1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,rgba(0, 0, 0, 1) 0%,rgba(71, 71, 71, 1) 28%,rgba(81, 81, 81, 1) 35%,rgba(71, 71, 71, 1) 72%,rgba(43, 43, 43, 1) 87%,rgba(28, 28, 28, 1) 91%,rgba(0, 0, 0, 1) 100%); /* W3C */  
+background: linear-gradient(to bottom,rgba(0, 0, 0, 1) 0%,rgba(71, 71, 71, 1) 28%,rgba(81, 81, 81, 1) 35%,rgba(71, 71, 71, 1) 72%,rgba(43, 43, 43, 1) 87%,rgba(28, 28, 28, 1) 91%,rgba(0, 0, 0, 1) 100%); /* W3C */
 }
 /*////////// MAIN SECTIONS //////////*/
 
@@ -206,7 +207,9 @@ section {
 }
 
 /*////////// DETAILS //////////*/
-
+#logo{
+  padding: 84px 0 0;
+}
 
 
 #details div {
