--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,8 @@ footer{
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px;
-  
+  border-top: 1px solid #ccc;
+
 }
 #logo h2 {
   font-family: 'Elsie Swash Caps', cursive;
